--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -1,144 +1,142 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-  <head th:fragment="head">
-    <meta charset="UTF-8" />
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" th:href="@{/css/custom.css}" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <script th:src="@{/js/bootstrap.js}"></script>
-  </head>
-  <header th:fragment="navbar">
-    <nav
-      class="navbar navbar-expand-md navbar-pc-economic-light bg-pc-economic-default"
-    >
-      <div class="container-fluid">
-        <div class="navbar-collapse collapse order-1 col-1">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/"
-                ><img class="col-12" src="/img/static/logo-no-background.png"
-              /></a>
-            </li>
-          </ul>
-        </div>
-        <!-- Cercador -->
-        <div class="mx-auto order-2 col-xs-8 col-7">
-          <div class="col-12">
-            <form class="d-flex">
-              <!-- Buscar -->
-              <input
-                aria-label="Search"
-                class="form-control me-2"
-                placeholder="Buscar"
-                type="search"
-              />
-              <button class="btn btn-pc-economic-dark" type="submit">
-                <i class="bi bi-search"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-        <!-- Login + Carrito -->
-        <button
-          class="navbar-toggler"
-          data-bs-target=".dual-collapse2"
-          data-bs-toggle="collapse"
-          type="button"
+    <head th:fragment="head">
+        <meta charset="UTF-8"/>
+        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <link href="https://fonts.googleapis.com" rel="preconnect"/>
+        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+        <link
+                href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+                rel="stylesheet"
+        />
+        <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+        <link
+                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+                rel="stylesheet"
+        />
+        <script th:src="@{/js/bootstrap.js}"></script>
+    </head>
+    <header th:fragment="navbar">
+        <nav
+                class="navbar navbar-expand-md navbar-pc-economic-light bg-pc-economic-default"
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse order-3 col">
-          <ul class="navbar-nav col-12 justify-content-evenly">
-            <li class="nav-item" style="">
-              <a class="nav-link btn btn-pc-economic-dark" href="/">
-                <i class="bi bi-person"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-pc-economic-dark" href="/">
-                <i class="bi bi-cart4"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <nav class="navbar navbar-expand-md bg-pc-economic-light">
-      <!-- Categories Offcanvas -->
-      <button
-        class="nav-link btn btn-pc-economic-dark ml-4"
-        type="button"
-        data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasScrolling"
-        aria-controls="offcanvasScrolling"
-      >
-        Todas las categorias
-      </button>
-    </nav>
+            <div class="container-fluid">
+                <div class="navbar-collapse collapse order-1 col-1">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/"
+                            ><img class="col-12" src="/img/static/logo-no-background.png"
+                            /></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Cercador -->
+                <div class="mx-auto order-2 col-xs-8 col-7">
+                    <div class="col-12">
+                        <form class="d-flex">
+                            <!-- Buscar -->
+                            <input
+                                    aria-label="Search"
+                                    class="form-control me-2"
+                                    placeholder="Buscar"
+                                    type="search"
+                            />
+                            <button class="btn btn-pc-economic-dark" type="submit">
+                                <i class="bi bi-search"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <!-- Login + Carrito -->
+                <button
+                        class="navbar-toggler"
+                        data-bs-target=".dual-collapse2"
+                        data-bs-toggle="collapse"
+                        type="button"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse order-3 col">
+                    <ul class="navbar-nav col-12 justify-content-evenly">
+                        <li class="nav-item" style="">
+                            <a class="nav-link btn btn-pc-economic-dark" href="/">
+                                <i class="bi bi-person"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-pc-economic-dark" href="/">
+                                <i class="bi bi-cart4"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <nav class="navbar navbar-expand-md bg-pc-economic-light">
+            <!-- Categories Offcanvas -->
+            <button
+                    class="nav-link btn btn-pc-economic-dark ml-4"
+                    type="button"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasScrolling"
+                    aria-controls="offcanvasScrolling"
+            >
+                Todas las categorias
+            </button>
+        </nav>
 
-    <div
-      class="offcanvas offcanvas-start text-light mt-5"
-      data-bs-scroll="true"
-      data-bs-backdrop="false"
-      tabindex="-1"
-      id="offcanvasScrolling"
-      aria-labelledby="offcanvasScrollingLabel"
-    >
-      <div class="offcanvas-header bg-pc-economic-default">
-        <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
-          Todas las categorias :
-        </h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="offcanvas-body text-dark">
-        <div th:each="categoria : ${categories}">
-          <a
-            th:href="@{/categoria/{id}(id=${categoria.id})}"
-            th:text="${categoria.name}"
-          >
-          </a>
+        <div
+                class="offcanvas offcanvas-start text-light mt-5"
+                data-bs-scroll="true"
+                data-bs-backdrop="false"
+                tabindex="-1"
+                id="offcanvasScrolling"
+                aria-labelledby="offcanvasScrollingLabel"
+        >
+            <div class="offcanvas-header bg-pc-economic-default">
+                <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
+                    Todas las categorias :
+                </h5>
+                <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="offcanvas"
+                        aria-label="Close"
+                ></button>
+            </div>
+            <div class="offcanvas-body text-dark">
+                <div th:each="categoria : ${categories}">
+                    <a th:href="@{/categoria/{id}(id=${categoria.id})}">
+                        <h5 th:text="${categoria.name}"></h5>
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
+    </header>
+    <footer
+            class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container"
+            th:fragment="footer"
+    >
+        <p class="col-md-4 mb-0 text-muted">
+            © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
+            Tapereres, 32, 07500 Manacor, Balearic Islands
+        </p>
+        <a
+                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+                href="/"
+        >
+            <svg class="bi me-2" height="32" width="40">
+                <use xlink:href="#bootstrap"></use>
+            </svg>
+        </a>
+    </footer>
+
+    <div th:fragment="jquery">
+        <script>
+            src = "https://code.jquery.com/jquery-3.6.3.min.js";
+            integrity = "sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=";
+            crossorigin = "anonymous";
+        </script>
     </div>
-  </header>
-  <footer
-    class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container"
-    th:fragment="footer"
-  >
-    <p class="col-md-4 mb-0 text-muted">
-      © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
-      Tapereres, 32, 07500 Manacor, Balearic Islands
-    </p>
-    <a
-      class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
-      href="/"
-    >
-      <svg class="bi me-2" height="32" width="40">
-        <use xlink:href="#bootstrap"></use>
-      </svg>
-    </a>
-  </footer>
-
-  <div th:fragment="jquery">
-    <script>
-      src = "https://code.jquery.com/jquery-3.6.3.min.js";
-      integrity = "sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=";
-      crossorigin = "anonymous";
-    </script>
-  </div>
 </html>
