--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -4,22 +4,20 @@
     <body>
         <header th:replace="layout/layout.html :: header"></header>
         <main class="container">
-            <!--<section class="col-12 mt-5">
+            <section class="col-12 mt-5">
                 <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal"
                      alt="slider-principal">
-            </section>-->
+            </section>
             <section id="productes" class="row mt-5">
 
                 <div th:each="article : ${articles}">
                     <div th:each="prop : ${propietats}">
 
                         <div th:if="${prop.article.id == article.id}">
-                            <!-- CARD PRODUCTES -->
-                            <div class="col-12">
+                            <div class="col-4">
                                 <a th:href="@{/article/{id}/{idPropietat}(id=${article.id},idPropietat=${prop.id})}"
                                    class="col-xs-12 col-sm-6 col-lg-4 text-center text-decoration-none">
                                     <div class="col-12">
-                                        <p th:text="${prop.imatges}"></p>
                                         <div th:each="img : ${imatges}">
                                             <img th:if="${img.propietats.id == prop.id && img.principal == true}"
                                                  th:src="@{/img/productes/{idArticle}/{idPropietat}/0.jpg (idArticle=${article.id}, idPropietat=${img.propietats.id}, idPath=${img.path})} "
