--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -6,13 +6,13 @@
     <main class="container">
       <div class="col-12 row">
         <div class="col-6 justify-content-center">
-          <!--<div id="carouselExample" class="carousel slide h-250px">
+          <div id="carouselExample" class="carousel slide h-250px">
             <div class="carousel-inner">
-              <div th:each="foto : ${article.imatges}" class="carousel-item">
+              <div th:each="foto : ${propietats.imatges}" class="carousel-item">
                 <img
                   th:id="${foto.id}"
                   class="d-block w-100"
-                  th:src="${foto.path}"
+                  th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
                   alt="img"
                 />
               </div>
@@ -41,7 +41,7 @@
               ></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>-->
+          </div>
         </div>
         <div class="d-flex flex-column col-md-6 col-sm-12">
           <h1 th:text="${propietats.article.nom}"></h1>
