fix(index) v0.0.6-snapshot FILTRA PER CATEGORIES

--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -59,7 +59,7 @@
                 </button>
                 <div class="navbar-collapse collapse order-3 col">
                     <ul class="navbar-nav col-12 justify-content-evenly">
-                        <li class="nav-item" style="">
+                        <li class="nav-item">
                             <a class="nav-link btn btn-pc-economic-dark" href="/">
                                 <i class="bi bi-person"></i>
                             </a>
