--- a/public/PCEconomic/src/main/resources/static/css/custom.css
+++ b/public/PCEconomic/src/main/resources/static/css/custom.css
@@ -53,8 +53,11 @@
   margin-right: auto;
 }
 
-.h-250px {
-  width: 250px;
+.imgSize {
+  max-width: 300px;
+  max-height: 200px;
+  width: auto;
+  height: auto;
 }
 
 :root {
