--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -59,8 +59,11 @@
   margin-right: auto;
 }
 
-.h-250px {
-  width: 250px;
+.imgSize {
+  max-width: 300px;
+  max-height: 200px;
+  width: auto;
+  height: auto;
 }
 
 $pc-economic-dark: #4c0bce;
