fix(index) v0.0.7-snapshot

--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -66,6 +66,15 @@
   height: auto;
 }
 
+
+.imgSizeArticle {
+  max-width: 624px;
+  max-height: 624px;
+  width: auto;
+  height: auto;
+  margin: auto;
+}
+
 $pc-economic-dark: #4c0bce;
 $pc-economic-default: #712cf9;
 $pc-economic-light: #8b5fff;
