--- a/public/PCEconomic/src/main/resources/static/css/custom.css
+++ b/public/PCEconomic/src/main/resources/static/css/custom.css
@@ -60,6 +60,13 @@
   height: auto;
 }
 
+.imgSizeArticle {
+  max-width: 624px;
+  max-height: 624px;
+  width: auto;
+  height: auto;
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
