--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -15,7 +15,13 @@
                 href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
                 rel="stylesheet"
         />
-        <script th:src="@{/js/bootstrap.js}"></script>
+        <!--<script th:src="@{/js/bootstrap.js}"></script>-->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+                integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+                integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+                crossorigin="anonymous"></script>
     </head>
     <header th:fragment="navbar">
         <nav
@@ -89,56 +95,20 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-
-                <span th:each="cat : ${categories}">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"  th:text="${cat.name}"></button>
-                      <ul class="dropdown-menu" th:if="${cat.id == subcat.categoria.id}" th:each="subcat : ${subcategories}">
-                        <li><a class="dropdown-item" th:href="@{/categoria/{id}(id=${subcat.id})}" th:text="${subcat.name}">Action</a></li>
+                <div th:each="cat : ${categories}" class="row justify-content-center">
+                    <div class="btn-group col-12 mb-2">
+                      <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown"
+                              aria-expanded="false" th:text="${cat.name}"></button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:if="${cat.id == subcat.categoria.id}"
+                               th:each="subcat : ${subcategories}" th:href="@{/categoria/{id}(id=${subcat.id})}"
+                               th:text="${subcat.name}">Action</a></li>
                       </ul>
                     </div>
-                </span>
-
-                <!--<ul>
-                    <li th:each="category : ${categories}">
-                        <span th:text="${category.name}"></span>
-                        <ul th:if="${category.children!=null}">
-                            <li th:each="subcategory : ${category.children}">
-                                <span th:text="${subcategory.name}"></span>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>-->
-                <!--<div th:each="categoria : ${categories}">
-                    <a th:href="@{/categoria/{id}(id=${categoria.id})}">
-                        <h5 th:text="${categoria.name}"></h5>
-                    </a>
-                </div>-->
+                    <br>
+                </div>
             </div>
         </div>
-        <!--
-                <div
-                        class="offcanvas offcanvas-start text-light mt-5"
-                        data-bs-scroll="true"
-                        data-bs-backdrop="false"
-                        tabindex="-1"
-                        id="offcanvasScrolling"
-                        aria-labelledby="offcanvasScrollingLabel"
-                >
-                    <div class="offcanvas-header bg-pc-economic-default">
-                        <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
-                        </h5>
-                        <button
-                                type="button"
-                                class="btn-close"
-                                data-bs-dismiss="offcanvas"
-                                aria-label="Close"
-                        ></button>
-                    </div>
-                    <div class="offcanvas-body text-dark">
-
-                    </div>
-                </div>-->
     </header>
     <footer
             class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container"
