Changes in the article

--- a/public/PCEconomic/src/main/resources/static/css/custom.css
+++ b/public/PCEconomic/src/main/resources/static/css/custom.css
@@ -63,9 +63,9 @@
 .imgSizeArticle {
   max-width: 624px;
   max-height: 624px;
-  width: auto;
-  height: auto;
-  margin: auto;
+  width: 624px;
+  height: 624px;
+  object-fit: contain;
 }
 
 :root {
