--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -63,7 +63,7 @@
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse order-3 col">
+                <div class="navbar-collapse collapse order-3 col"  id="navbarSupportedContent">
                     <ul class="navbar-nav col-12 justify-content-evenly">
                         <li class="nav-item">
                             <a class="nav-link btn btn-pc-economic-dark" href="/">
