fix(article) v0.0.10-snapshot -changed all the article.html

--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="layout/layout.html :: head"></head>
-    <body>
+    <body class="bgbd">
         <header th:replace="layout/layout.html :: header"></header>
-        <main class="container">
+        <main class="container-lg bg-cont mt-md-5 mt-1">
             <section class="col-12 mt-5">
                 <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal"
                      alt="slider-principal">
