--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -68,16 +68,41 @@
 
 
 .imgSizeArticle {
-  max-width: 624px;
-  max-height: 624px;
-  width: 624px;
-  height: 624px;
+  max-width: 625px;
+  max-height: 625px;
+  width: 625px;
+  height: 625px;
   object-fit: contain;
+}
+
+.carousel-color {
+  color: #000000;
+}
+.object-fit-cover {
+  object-fit: cover;
+}
+
+
+.container-bg{
+  border: 1px solid #282828;
 }
 
 $pc-economic-dark: #4c0bce;
 $pc-economic-default: #712cf9;
 $pc-economic-light: #8b5fff;
+
+.bgbd{
+  background-color: #4C0BCE;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%235f1ce4'/%3E%3Cstop offset='1' stop-color='%235f1ce4' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%236c35e7'/%3E%3Cstop offset='1' stop-color='%236c35e7' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%237e46fc'/%3E%3Cstop offset='1' stop-color='%237e46fc' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%234C0BCE'/%3E%3Cstop offset='1' stop-color='%234C0BCE' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23712CF9'/%3E%3Cstop offset='1' stop-color='%23712CF9' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%238B5FFF'/%3E%3Cstop offset='1' stop-color='%238B5FFF' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.bg-cont{
+  background-color: #ffffff;
+  border: .5px solid #282828;
+  border-radius: 25px ;
+}
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../../../../frontend/node_modules/bootstrap/scss/variables";
