--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head th:replace="layout/layout.html :: head"></head>
-  <body class="bgbd">
-    <header th:replace="layout/layout.html :: header"></header>
-    <main class="container bg-cont mt-md-5 mt-1">
-      <div class="col-12 row mt-2">
-        <div class="col-md-6 col-sm-12">
-          <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item" th:each="foto : ${imatges}"
-                   th:if=" ${propietats.id == foto.propietats.id}">
-                <img class="d-block img-fluid imgSizeArticle"
-                     th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}">
-              </div>
+    <head th:replace="layout/layout.html :: head"></head>
+    <body class="bgbd">
+        <header th:replace="layout/layout.html :: header"></header>
+        <main class="container bg-cont mt-md-5 mt-5">
+            <div class="col-12 row m-2 justify-content-center">
+                <div class="col-md-6 col-sm-12">
+                    <div id="carouselExampleIndicators" class="carousel slide">
+                        <div class="carousel-inner">
+                            <div class="carousel-item" th:each="foto : ${imatges}"
+                                 th:if=" ${propietats.id == foto.propietats.id}">
+                                <img class="d-block img-fluid imgSizeArticle"
+                                     th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" data-bs-slide="prev"
+                                data-bs-target="#carouselExampleIndicators"
+                                type="button">
+                            <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-left"></i></span>
+                        </button>
+                        <button class="carousel-control-next" data-bs-slide="next"
+                                data-bs-target="#carouselExampleIndicators"
+                                type="button">
+                            <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-12">
+                    <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
+                    <h5 class="text-body mt-2"
+                        th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
+
+                    <h3 class="text-center mt-3" th:text="${preuEuros}"></h3>
+
+                    <input type="number" class="form-control mt-4" id="quantity" name="quantity" min="1"
+                           th:max="${propietats.stock}" value="1">
+                    <div class="d-flex justify-content-evenly mt-5">
+                        <button class="btn btn-pc-economic-light col-5">Añadir al Carrito</button>
+                        <button class="btn btn-pc-economic-dark col-5">Comprar</button>
+                    </div>
+                </div>
+
+                <div class="col-12 mt-5 row justify-content-center">
+                    <div class="col-12">
+                        <h3>Propietades del producto</h3>
+                        <p th:each="prop : ${propietats.valor}"
+                           th:text="' - ' + ${prop.propietat.nom} + ': ' + ${prop.valor}"></p>
+
+                        <h3>Descripción</h3>
+                        <p th:text="${propietats.article.descripcio}"></p>
+                    </div>
+                </div>
             </div>
-            <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleIndicators"
-                    type="button">
-              <span class="carousel-color" aria-hidden="true">Anterior</span>
-            </button>
-            <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleIndicators"
-                    type="button">
-              <span class="carousel-color" aria-hidden="true">Siguiente</span>
-            </button>
-          </div>
-        </div>
+        </main>
+        <script
+                crossorigin="anonymous"
+                integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
+                src="https://code.jquery.com/jquery-3.6.2.min.js"
+        ></script>
 
-        <div class="col-md-6 col-sm-12">
-          <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
-          <h5 class="text-body mt-2"
-              th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
+        <script>
+            $(document).ready(function () {
+                $(".carousel-item:first").addClass("active");
+            });
+        </script>
 
-          <h3 class="text-center mt-2" th:text="${preuEuros}"></h3>
-
-          <input type="number" class="form-control mt-2" id="quantity" name="quantity" min="1" th:max="${propietats.stock}" value="1">
-          <div class="d-flex justify-content-evenly mt-4">
-            <button class="btn btn-pc-economic-light col-5">Añadir al Carrito</button>
-            <button class="btn btn-pc-economic-dark col-5">Comprar</button>
-          </div>
-        </div>
-
-
-      </div>
-      </div>
-      <div>
-        <h3>Propietats del producte</h3>
-        <span th:each="prop : ${propietats.valor}"> <p
-                th:text="${prop.propietat.nom} +': ' + ${prop.valor}"></p> </span>
-        <h3>Descripción</h3>
-        <p th:text="${propietats.article.descripcio}"></p>
-      </div>
-    </main>
-    <script
-            crossorigin="anonymous"
-            integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
-            src="https://code.jquery.com/jquery-3.6.2.min.js"
-    ></script>
-
-    <script>
-      $(document).ready(function () {
-        $(".carousel-item:first").addClass("active");
-      });
-    </script>
-
-    <footer th:replace="layout/layout :: footer"></footer>
-  </body>
+        <footer th:replace="layout/layout :: footer"></footer>
+    </body>
 </html>
